@@ -1,3 +1,7 @@
+drkns 18.05.2020 18:13:57 +0100 - build 5602
+
+1. Уточнение 5599.
+
 zg 18.05.2020 17:08:41 +0300 - build 5601
 
 1. экспериментально: новое событие SE_FOLDERCHANGED, приходит асинхронно при смене текущей папки в панелях.
